# Purp3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  LICENSE  README.md
engine/include/: purp3d.h
engine/include/purp3d/core/: application.h  applicationspecification.h  core.h  entrypoint.h  window.h  windowspecification.h
engine/include/purp3d/core/events/: event.h  eventdispatcher.h  eventqueue.h  keyevents.h  mouseevents.h  scriptevents.h  windowevents.h
engine/include/purp3d/core/input/: input.h  keycodes.h  mousecodes.h
engine/include/purp3d/core/layer/: layer.h  layerstack.h
engine/include/purp3d/core/layer/imgui/: imguilayer.h
engine/include/purp3d/core/log/: logger.h
engine/include/purp3d/renderer/: glutils.h  renderer.h  shader.h
engine/include/purp3d/scripting/: scriptcontext.h  scriptengine.h
engine/include/purp3d/scripting/lua/: luabindings.h  luavm.h
engine/include/purp3d/scripting/lua/bindings/: luaenginebindings.h  luaeventbindings.h  luainputbindings.h  lualogbindings.h
engine/src/core/: application.cpp  window.cpp
engine/src/core/input/: input.cpp
engine/src/core/layer/: layer.cpp  layerstack.cpp
engine/src/core/layer/imgui/: imguibuild.cpp  imguilayer.cpp
engine/src/core/log/: logger.cpp
engine/src/core/renderer/: glutils.cpp  renderer.cpp
engine/src/renderer/: glutils.cpp  renderer.cpp  shader.cpp
engine/src/scripting/: scriptcontext.cpp  scriptengine.cpp
engine/src/scripting/lua/: luabindings.cpp  luavm.cpp
engine/src/scripting/lua/bindings/: luaenginebindings.cpp  luaeventbindings.cpp  luainputbindings.cpp  lualogbindings.cpp
game/assets/scripts/: main.lua
game/include/: testapplayer.h
game/src/: main.cpp  testapp.cpp  testapplayer.cpp
